--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,7 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+---
+title: "first"
+date: 2021-09-19
+---
